--- a/pdfToImage.ipynb
+++ b/pdfToImage.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1JzY_Ip-zcpSQrT2a-NdjMNfd7UVg23SS",
-      "authorship_tag": "ABX9TyPR4C8WeUkpPmt4DKTLvcLC",
+      "authorship_tag": "ABX9TyM55lvcpsMIlaf8oDjTViQF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5672,6 +5672,45 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "# Specify the directory containing the image files\n",
+        "image_directory = \"/path/to/your/image/directory\"\n",
+        "\n",
+        "# Get the list of image files in the directory\n",
+        "image_files = [f for f in os.listdir(image_directory) if f.endswith(('.png', '.jpg', '.jpeg'))]\n",
+        "\n",
+        "# Iterate through the image files and rename them\n",
+        "for index, old_filename in enumerate(image_files, start=1):\n",
+        "    extension = os.path.splitext(old_filename)[1]  # Get the file extension\n",
+        "    new_filename = f\"image_{index:02d}{extension}\"  # Use f-strings to create the new filename with leading zeros\n",
+        "\n",
+        "    # Build the full paths for the old and new filenames\n",
+        "    old_filepath = os.path.join(image_directory, old_filename)\n",
+        "    new_filepath = os.path.join(image_directory, new_filename)\n",
+        "\n",
+        "    # Rename the file\n",
+        "    os.rename(old_filepath, new_filepath)\n",
+        "    print(f\"Renamed: {old_filename} -> {new_filename}\")\n"
+      ],
+      "metadata": {
+        "id": "rjVRaK2tS5yy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Testing\n"
+      ],
+      "metadata": {
+        "id": "5hGYJ2eNFBxN"
+      }
     }
   ]
 }
