--- a/Image_preprocessing.ipynb
+++ b/Image_preprocessing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1_ByEeBQM3tWQ0YQVHTCUKKLIyMtBtu4e",
-      "authorship_tag": "ABX9TyOn4o1vPoh9Y+D2yDrCtrT4",
+      "authorship_tag": "ABX9TyOShnipN5pFqw1KDtXs/6Uz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -307,7 +307,7 @@
       "metadata": {
         "id": "LcsLiB_tbB9I"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -344,7 +344,7 @@
       "metadata": {
         "id": "qFAX10U1yirE"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -368,7 +368,7 @@
       "metadata": {
         "id": "l4T6mCgFy-cY"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -384,7 +384,7 @@
       "metadata": {
         "id": "Mf-BF2TT2Bsl"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -426,7 +426,7 @@
         "id": "6eDiMTKo5KE8",
         "outputId": "2f1a6a1a-88f8-4b21-bf11-3b5cf1160da7"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,7 +517,7 @@
         "id": "XdAp6HfR5Zfp",
         "outputId": "79eb0692-3987-4a6b-ccb5-3d3ac3f8c2e3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -628,7 +628,7 @@
         },
         "outputId": "6bb3685b-3555-44fa-f68f-6db35591c519"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -694,7 +694,7 @@
         },
         "outputId": "a5f1016b-3f35-4499-e543-95bf0f4ea7d7"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5756,11 +5756,13 @@
     {
       "cell_type": "code",
       "source": [
-        "input_folder = \"/content/drive/MyDrive/resource/other-documents/equalized_images\"\n",
+        "input_folder = \"/content/drive/MyDrive/resource/other-doc-v2/augmented_images_new\"\n",
+        "#input_folder = \"/content/drive/MyDrive/resource/other-documents/images\"\n",
+        "\n",
         "\n",
         "image_files = [f for f in os.listdir(input_folder) if f.endswith(('.png', '.jpg', '.jpeg'))]\n",
         "train_ratio = 0.2\n",
-        "test_ratio = 0.2\n",
+        "test_ratio = 0.3\n",
         "validation_ratio = 0.2\n",
         "\n",
         "total_images = len(image_files)\n",
@@ -5775,15 +5777,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DVrZh6Ko2bLJ",
-        "outputId": "f9a77e22-9bfd-490b-846a-129398180088"
+        "outputId": "91e05a2c-040f-47da-bfaa-d3d060af99c4"
       },
-      "execution_count": 20,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Total images 7346 ; train_split is 1469 test_split 1469\n"
+            "Total images 109 ; train_split is 21 test_split 32\n"
           ]
         }
       ]
@@ -5844,7 +5846,61 @@
       "metadata": {
         "id": "KApkhiPd2jN3"
       },
-      "execution_count": 21,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cv2\n",
+        "import os\n",
+        "\n",
+        "# Function to perform data augmentation (rotate by 90 and 180 degrees) on an image using OpenCV\n",
+        "def augment_images(input_folder, output_folder):\n",
+        "    os.makedirs(output_folder, exist_ok=True)\n",
+        "\n",
+        "    # Iterate through each image in the input folder\n",
+        "    for image_name in os.listdir(input_folder):\n",
+        "        if image_name.endswith(('.png', '.jpg', '.jpeg')):\n",
+        "            image_path = os.path.join(input_folder, image_name)\n",
+        "\n",
+        "            # Load the image using OpenCV\n",
+        "            img = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
+        "\n",
+        "            # Save the original image\n",
+        "            original_img_path = os.path.join(output_folder, f\"{image_name.split('.')[0]}_0.png\")\n",
+        "            cv2.imwrite(original_img_path, img)\n",
+        "\n",
+        "            # Rotate by 90 degrees\n",
+        "            rotated_90_img = cv2.rotate(img, cv2.ROTATE_90_CLOCKWISE)\n",
+        "            rotated_90_img_path = os.path.join(output_folder, f\"{image_name.split('.')[0]}_1.png\")\n",
+        "            cv2.imwrite(rotated_90_img_path, rotated_90_img)\n",
+        "\n",
+        "            # Rotate by 180 degrees\n",
+        "            rotated_180_img = cv2.rotate(img, cv2.ROTATE_90_COUNTERCLOCKWISE)\n",
+        "            rotated_180_img_path = os.path.join(output_folder, f\"{image_name.split('.')[0]}_2.png\")\n",
+        "            cv2.imwrite(rotated_180_img_path, rotated_180_img)\n",
+        "\n",
+        "            # Rotate by 180 degrees\n",
+        "            rotated_180_img = cv2.rotate(img, cv2.ROTATE_180)\n",
+        "            rotated_180_img_path = os.path.join(output_folder, f\"{image_name.split('.')[0]}_3.png\")\n",
+        "            cv2.imwrite(rotated_180_img_path, rotated_180_img)\n",
+        "\n",
+        "\n",
+        "# Example Usage\n",
+        "input_images_folder = \"/content/drive/MyDrive/resource/other-documents/images\"\n",
+        "output_augmented_images_folder = \"/content/drive/MyDrive/resource/other-doc-v2/augmented_images_new\"\n",
+        "\n",
+        "# Specify the number of augmented images you want to generate\n",
+        "num_augmented_images = 5\n",
+        "\n",
+        "augment_images(input_images_folder, output_augmented_images_folder)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "t3xWq9ycmouf"
+      },
+      "execution_count": 34,
       "outputs": []
     },
     {
